# flood_model

./: .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml
data/dem/: dem_viewer.py  taree.tif
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
notebooks/: 2d_mesh_exp.py  building_risk.py  floodnet_test.py  nsw_data.py
results/hand/: ins.py
sentinel_images/: sentinel_2025-05-01.tif
src/: aoi.yaml
src/data/: __init__.py  class.py  dataclass.py
src/data/fetch/: dem.py  landuse.py  rainfall.py  satellite.py
src/model/: floodnet.py
src/utils/: __init__.py  gee.py
